# sinsei_UMIUSI_msgs

./: .editorconfig  .env  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  docker-compose.yml  package.xml
.devcontainer/: devcontainer.json
.docker/scripts/: install-ec.sh
.docker/work/: Dockerfile
.github/workflows/: main.yml
.github/workflows/scripts/: parse-env-file.sh
msg/: EscState.msg  HeadlightsOutput.msg  HealthCheckResult.msg  HighPowerCircuitHealth.msg  HighPowerCircuitInfo.msg  ImuState.msg  IndicatorLedOutput.msg  LedTapeOutput.msg  LowPowerCircuitInfo.msg  MainPowerEnabled.msg  MainPowerOutput.msg  RobotState.msg  Target.msg  ThrusterEnabled.msg  ThrusterEnabledAll.msg  ThrusterMode.msg  ThrusterOutput.msg  ThrusterOutputAll.msg  ThrusterRunnable.msg  ThrusterRunnableAll.msg  ThrusterState.msg  ThrusterStateAll.msg
srv/: PowerOff.srv  PowerOn.srv  SetMode.srv  SetState.srv
